# aix

./: .dockerignore  .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  .lintstagedrc.json  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.md  COMPLETION_REPORT.md  CONTEXT_TRANSFER_SUMMARY.md  CONTRIBUTING.md  CORE_REVIEW.md  Cargo.toml  Dockerfile  FINAL_REVIEW_SUMMARY.md  FINAL_SUMMARY.md  GEMINI.md  IMPLEMENTATION_STATUS.md  LICENSE  LICENSE-MIT  MIGRATION.md  PACK.md  PLAN.md  PROJECT_OVERVIEW.md  PROJECT_REVIEW.md  PROJECT_SUMMARY.md  PUBLISH.md  QUICK_COMMANDS.md  README.md  READY_TO_PUBLISH.md  RELEASE_CHECKLIST.md  REVIEW_SUMMARY.md  SECURITY.md  SESSION_CHECKLIST.md  SESSION_COMPLETE.md  SESSION_WORK_SUMMARY.md  SKILL.md  (+37 more)
.agent/: BOUNDARY.md  SYSTEM.md
.agents/: GEMINI.md  README.md  bundles.json  marketplace.json  skills.lock.json  skills_index.json  workflows.json
.changeset/: core-review-release-fix.md
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: AGENTS.md
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.goal/: index.js  package-lock.json  package.json  scope.md
.harness/: DECISIONS.md  GATES.md  GOAL.md  HARNESS.md  HAZARDS.md  INDEX.md  MEMORY.md  REPORT_TEMPLATES.md  SKILLS.md  STATE.md  TEAM.md  WORKFLOW.md  config.json  context.md  domain-analysis.json  policies.json
.husky/: pre-push
agent-system/: OUTPUT_PATTERNS.md  RESPONSE_CONTRACT.md  SYSTEM_PROMPT.md  TONE_AND_FORMAT.md
agents/: explorer.toml  fixer.toml  gatekeeper.toml  reviewer.toml  verifier.toml
commands/: harness-build.md  harness-discuss.md  harness-doctor.md  harness-map.md  harness-plan.md  harness-remember.md  harness-run.md  harness-ship.md  harness-start.md  harness-status.md  harness-verify.md
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ASK_PLAN_IMPLEMENT_ARCHITECTURE.md  CHANGES_SUMMARY.md  CLI_USAGE.md  CONTEXT_WINDOWS.md  DETERMINISTIC_MODE.md  DEV_OS_BLUEPRINT.md  FINAL_SESSION_SUMMARY.md  FIXES_APPLIED.md  GAP_COMPARISON.md  GAP_COVERAGE.md  GAP_QUICK_REFERENCE.md  GAP_ROADMAP.md  GIT_INTEGRATION.md  IMPLEMENTATION_PLAN.md  INDEX.md  INSTALLATION.md  LANGGRAPH_REBUILD_PLAN.md  LANGGRAPH_RUNTIME_CONTRACTS.md  LLM_PROVIDERS.md  MULTI_AGENT_COORDINATION.md  OPENTELEMETRY.md  OUTPUT_SCHEMAS.md  PLATFORM_API.md  PLATFORM_CONFIG_GUIDE.md  PLATFORM_MIGRATION_GUIDE.md  PLATFORM_OVERVIEW.md  PLATFORM_QUICK_REFERENCE.md  PLATFORM_USAGE_EXAMPLES.md  PROGRESS_SUMMARY.md  QUICK_START_FIXES.md  README.md  REMAINING_GAPS.md  REPLAY_STORE.md  SANDBOX.md  SANDBOX_ARCHITECTURE.md  SESSION_SUMMARY_2026-03-07.md  SESSION_SUMMARY_2026-03-07_FINAL.md  SKILL_GOVERNANCE.md  (+187 more)
evals/: README.md
examples/: anthropic_workflow.md  benchmarking_example.rs  bug-sample.md  cost_optimized_workflow.md  deterministic_workflow.md  diff_learning_example.rs  multi_provider_fallback.md  platform_config_example.md  sandbox_workflow.md  workflow_marketplace_example.rs
gpt/: 20.txt  21.txt  22.txt  23.txt  23b.txt  24b.txt  24c.txt  24d.txt  3338.txt  3944.txt  62.txt  69.txt  76.txt  83.txt  90.txt  98.txt  chat-gpt p1.txt  chat-gpt p2.txt  chat-gpt p3.txt  chat-gpt-4.txt  chat-gpt-p1013.txt  chat-gpt-p1317.txt  chat-gpt-p1820.txt  chat-gpt-p2327.txt  chat-gpt-p2832.txt  chat-gpt-p4-update.txt  chat-gpt-p5.txt  chat-gpt-p6.txt  chat-gpt-p7.txt  chat-gpt.txt  check1.txt  d-v1.txt  idea.txt
hooks/: README.md  hooks-cursor.json  hooks.json  session-start-cursor  session-start.sh
lib/: cli-args.js  cli-args.ts  cli-backend.js  cli-backend.ts  cli-command-helpers.js  cli-command-helpers.ts  cli-detect.js  cli-detect.ts  cli-help.js  cli-help.ts  cli-main.js  cli-main.ts  cli-plan.js  cli-plan.ts  cli-prompts.js  cli-prompts.ts  cli-providers.js  cli-providers.ts  cli-ui.js  cli-ui.ts  command-surface-report.js  command-surface-report.ts  domain-skill-generation.ts  file-operations.js  file-operations.ts  install-cache.js  install-cache.ts  install-legacy.js  install-legacy.ts  install-runtime.js  install-runtime.ts  plugin-packaging.js  plugin-packaging.ts  provider-binary-detect.ts  provider-detection.ts  provider-interaction-tools.ts  provider-registry.js  provider-registry.ts  provider-rule-renderer.js  provider-rule-renderer.ts  (+7 more)
media/: walkthrough-video.json
prompt-templates/: blocker-question.md  code-reviewer.md  discussion-question.md  domain-analysis.md  harness-plan.md  harness-run.md  harness-ship.md  harness-verify.md  option-scoring.md
prompts/: README.md  fullstack-pro.md
providers/: claude.json  codex.json
runtime/: README.md
runtime-install/: merge-config.js
scripts/: README.md  bootstrap.sh  build-codex-plugin.js  ci_gate.sh  compare_providers.sh  deploy.sh  discover-provider-tools.js  discover-report-templates.js  discover-tools.js  fix-test-paths.js  generate-compatibility-matrix.js  generate-policy-docs.js  generate-report-context.js  generate-web-data.js  publish-walkthrough-video.js  purge-media-from-history.sh  run-local-ci.js  scaffold-cli-phase7.js  scaffold-eval-phase5.js  scaffold-install-phase4.js  scaffold-scan-domains-phase6.js  seed-p1-eval-corpus.js  setup-vps.sh  smoke-install.js  smoke_clean_clone.sh  split-catalog.js  sync-site-version.js  test_replay.sh  (+7 more)
(+2289 files in other folders)
