[package]
name = "agentic-sdlc"
version = "1.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
async-trait = "0.1"
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
aws-config = "1"
aws-sdk-bedrockruntime = "1"
base64 = "0.22"

# Git integration
git2 = "0.18"
octocrab = "0.49"  # Upgraded for better API compatibility
gitlab = "0.1610"

[dev-dependencies]
tempfile = "3"
