[package]
name = "agentic-sdlc"
version = "1.2.0"
edition = "2021"
keywords = ["mcp", "karpathy", "discipline", "ai", "agents", "workflow", "llm", "sdlc"]
authors = ["agentic-sdlc contributors"]
description = "Deterministic runtime for AI agent workflows with sandboxing, LLM providers, Git integration, and observability"
license = "MIT OR Apache-2.0"
repository = "https://github.com/truongnat/agentic-sdlc"
homepage = "https://agentic-sdlc-truongdqdev-9126s-projects.vercel.app"
documentation = "https://docs.rs/agentic-sdlc"
readme = "README.md"
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "docs/*",
    "examples/*",
    ".github/*",
    "*.md",
    "!README.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "asd"
path = "src/bin/asd.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
async-trait = "0.1"
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
aws-config = "1"
aws-sdk-bedrockruntime = "1"
base64 = "0.22"

# Git integration
git2 = "0.18"
octocrab = "0.49"  # Upgraded for better API compatibility
gitlab = "0.1610"

# Vector store (PostgreSQL + pgvector)
# Using tokio-postgres to avoid rusqlite conflict
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
pgvector = { version = "0.3", features = ["postgres"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Skill governance (cryptographic verification)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
toml = "0.8"
serde_yaml = "0.9"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
