[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-goal"
version = "0.1.0"
description = "CLI agentic SDLC: /goal -> plan -> rules -> tasks -> execute with coder+reviewer loop"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openrouter>=0.2.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.40",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.1.0",
]

[project.scripts]
goal = "agentic_goal.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_goal"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
